--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,21 @@
 		"scripts": ["contexts.js"],
 		"persistent": false
 	},
-	"permissions": ["contextMenus", "storage", "activeTab"],
+	"permissions": ["contextMenus", "storage", "activeTab", "clipboardWrite", "tabs"],
 	"browser_action": {
-		"default_popup": "popup.html"
+		"default_popup": "popup.html",
+		"default_icon": {
+			"16": "images/image16.png",
+			"32": "images/image32.png",
+			"48": "images/image48.png",
+			"128": "images/image128.png"
+		  }
 	},
-	"manifest_version": 2
+	"manifest_version": 2,
+	"icons": {
+		"16": "images/image16.png",
+		"32": "images/image32.png",
+		"48": "images/image48.png",
+		"128": "images/image128.png"
+	  }
 }
